welcome.lessons.welcome.array.array667.Array667.scala.error
array667:2: error: not found: value compteur
  compteur = 0
  ^array667:4: error: type mismatch;
 found   : Boolean
 required: Int
    if (nums(i)==6 && (nums(i+1)==6 || nums(i+1==7))){
                                               ^array667:5: error: not found: value compteur
      compteur = compteur +1
      ^array667:8: error: not found: value compteur
  return compteur
         ^